--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 -e git+https://github.com/Code4SA/censusreporter.git@wazimap-pip#egg=wazimap
+Django==1.9.2
 GDAL==1.11.0
 gevent==1.0.1
 greenlet==0.4.6
