--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,2 @@
-gevent==1.0.1
-gunicorn==19.7.1
-wazimap==1.1.1
-GDAL==1.11.0
-whitenoise==3.3.1
-libsass==0.13.3
+-e git+https://github.com/CodeForAfricaLabs/HURUmap.git@develop#egg=hurumap
+gunicorn==19.8.1
