--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ wazimap==1.1.1
 GDAL==1.11.0
 whitenoise==3.3.1
 libsass==0.13.3
+-e git+https://github.com/CodeForAfricaLabs/HURUmap.git@develop#egg=hurumap
