--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ whitenoise==3.3.1
 libsass==0.13.3
 -e git+https://github.com/CodeForAfricaLabs/HURUmap.git@develop#egg=hurumap
 Shapely==1.6.2.post1
+tweepy
