--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,17 @@ services:
       - POSTGRES_USER=our_land
       - POSTGRES_PASSWORD=our_land
       - POSTGRES_DB=our_land
-
+      
+  nginx:
+    image: nginx:latest
+    ports:
+      - "8000:8000"
+    volumes:
+      - ./:/src/our_land
+      - ./config/nginx:/etc/nginx/conf.d
+      - /static:/static
+    depends_on:
+      - web
   web:
     build: .
     ports:
@@ -17,7 +27,8 @@ services:
     depends_on:
       - db
     volumes:
-      - "./:/src/our_land"
+      - ./:/src/our_land
+      - /static:/static
     environment:
       - DATABASE_URL=postgresql://our_land:our_land@db:5432/our_land
       - DJANGO_SECRET_KEY=somethingsecret
