--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 gunicorn==19.8.1
 
-git+https://github.com/CodeForAfricaLabs/HURUmap.git@develop#egg=hurumap
+git+https://github.com/CodeForAfrica/HURUmap.git@master#egg=hurumap
 
-# workaround: setup keeps installing wazimap from PYPI
-git+https://github.com/CodeForAfricaLabs/wazimap.git@master#egg=wazimap
+# workaround: `pip install` keeps installing wazimap from PYPI, we need the one from Github
+git+https://github.com/OpenUpSA/wazimap.git@2cdc95447c95f20d1ba9bb2e272eef25075e14ff#egg=wazimap
 
 Shapely>=1.5.13
