changed wazimap github point

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ gunicorn==19.8.1
 git+https://github.com/CodeForAfricaLabs/HURUmap.git@master#egg=hurumap
 
 # workaround: setup keeps installing wazimap from PYPI
-git+https://github.com/CodeForAfricaLabs/wazimap.git@master#egg=wazimap
+git+https://github.com/OpenUpSA/wazimap.git@2cdc95447c95f20d1ba9bb2e272eef25075e14ff#egg=wazimap
 
 Shapely>=1.5.13
