--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
 gunicorn==19.8.1
 
-git+https://github.com/CodeForAfricaLabs/HURUmap.git@develop#egg=hurumap
-
-# workaround: setup keeps installing wazimap from PYPI
-git+https://github.com/CodeForAfricaLabs/wazimap.git@master#egg=wazimap
+git+https://github.com/CodeForAfricaLabs/HURUmap.git@master#egg=hurumap
 
 Shapely>=1.5.13
