--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,6 @@ services:
     environment:
       - POSTGRES_USER=hurumap
       - POSTGRES_PASSWORD=hurumap
-      - POSTGRES_DB=hurumap
       - PGUSER=hurumap
       - PGPASSWORD=hurumap
 
@@ -21,12 +20,30 @@ services:
     volumes:
       - ./:/src/hurumap
     environment:
-      - DATABASE_URL=postgresql://hurumap:hurumap@db:5432/hurumap
+      - DATABASE_URL=postgresql://hurumap:hurumap@db:5432/our_land
       - DJANGO_SECRET_KEY=somethingsecret
       - HURUMAP_URL='http://localhost:8000'
       - PGHOST=db
-      - PGDATABASE=hurumap
+      - PGDATABASE=our_land
       - PGUSER=hurumap
       - PGPASSWORD=hurumap
       - PYTHONDONTWRITEBYTECODE="True"
       # - DJANGO_DEBUG=False  # For testing deploys
+  
+  hurumap-zm:
+    build: ./hurumap_zm/
+    ports:
+      - "8000:8000"
+    depends_on:
+      - db
+    volumes:
+      - ./:/src/hurumap
+    environment:
+      - DATABASE_URL=postgresql://hurumap:hurumap@db:5432/hurumap_zm
+      - DJANGO_SECRET_KEY=somethingsecret
+      - HURUMAP_URL='http://localhost:8000'
+      - PGHOST=db
+      - PGDATABASE=hurumap_zm
+      - PGUSER=hurumap
+      - PGPASSWORD=hurumap
+      - PYTHONDONTWRITEBYTECODE="True"
