--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-git+https://github.com/CodeForAfrica/HURUmap.git@master#egg=hurumap
+git+https://github.com/CodeForAfrica/HURUmap.git@v0.0.1#egg=hurumap
 
 # Workaround for dependency links
 # Comment out when changes / updates / PR accepted
