[Feature] HURUmap-Apps:Land Implement "Discover" banner as floating box (#95)
* add a discover floating box

* styling floating div

* fix typo

* hurumap land database url

* PR request changes

* fix floating div position

* changed floating div link

* font weight

* add right arrow on banner

* add comment on homepage template

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - DJANGO_SETTINGS_MODULE=${HURUMAP_APP}.settings
       - DATABASE_URL=postgresql://hurumap:hurumap@db:5432/${HURUMAP_APP}
       - DJANGO_SECRET_KEY=somethingsecret
-      - HURUMAP_URL='http://localhost:8000'
+      - HURUMAP_URL="http://localhost:8000"
       - PGHOST=db
       - PGDATABASE=${HURUMAP_APP}
       - PGUSER=hurumap
