--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 git+https://github.com/CodeForAfrica/HURUmap.git@feature/upgrade_to_releases#egg=hurumap
 # Workaround for dependency links
 # Comment out when changes / updates / PR accepted
+
+git+https://github.com/CodeForAfricaLabs/wazimap.git@release-merge#egg=wazimap
