--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       - POSTGRES_USER=hurumap
       - POSTGRES_PASSWORD=hurumap
-      - POSTGRES_DB=hurumap
+      - POSTGRES_DB=${HURUMAP_APP:-hurumap_land}
       - PGUSER=hurumap
       - PGPASSWORD=hurumap
 
