--- a/dominion-frontend/package.json
+++ b/dominion-frontend/package.json
@@ -7,8 +7,10 @@
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
+    "leaflet": "^1.4.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-leaflet": "^2.2.0",
     "react-scripts": "2.1.3",
     "reactstrap": "^7.0.2"
   },
