--- a/dominion-frontend/package.json
+++ b/dominion-frontend/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
+    "geojson-world-map": "^0.0.2",
     "leaflet": "^1.4.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
