--- a/dominion/frontend/package.json
+++ b/dominion/frontend/package.json
@@ -1,10 +1,24 @@
 {
-  "name": "frontend",
+  "name": "Dominion",
+  "description": "Dominion",
   "version": "0.1.0",
+  "author": "Code for Africa <support@codeforafrica.com>",
   "private": true,
+  "homepage": "http://dominion.investigate.africa",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.6.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-brands-svg-icons": "^5.6.3",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@material-ui/core": "^3.9.0",
+    "@material-ui/icons": "^3.0.2",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-helmet": "^5.2.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3"
   },
   "scripts": {
