--- a/dominion/frontend/package.json
+++ b/dominion/frontend/package.json
@@ -30,6 +30,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
   "browserslist": [
     ">0.2%",
     "not dead",
@@ -37,7 +40,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint": "^5.12.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^3.6.0",
     "eslint-plugin-import": "^2.15.0",
