dominion frontend cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -174,7 +174,7 @@ static/*
 # Logs
 **/**/logs
 *.log
-**/**/npm-debug.log*
+npm-debug.log*
 **/**/yarn-debug.log*
 **/**/yarn-error.log*
 
@@ -208,6 +208,7 @@ static/*
 # Dependency directories
 **/**/node_modules/
 **/**/jspm_packages/
+**/**/public/
 
 # Typescript v1 declaration files
 **/**/typings/
@@ -227,10 +228,6 @@ static/*
 # dotenv environment variables file
 **/**/.env
 
-# gatsby files
-**/**/.cache/
-**/**/public
-
 # Mac files
 **/**/.DS_Store
 
@@ -240,4 +237,3 @@ static/*
 **/**/.pnp.js
 # Yarn Integrity file
 **/**/.yarn-integrity
-
