--- a/dominion/frontend/.eslintrc.json
+++ b/dominion/frontend/.eslintrc.json
@@ -1,4 +1,5 @@
 {
+  "root": true,
   "extends": ["airbnb", "plugin:prettier/recommended", "prettier/react"],
   "env": {
     "browser": true
@@ -11,6 +12,5 @@
         "extensions": [".js", ".jsx"]
       }
     ]
-    "jsx-a11y/click-events-have-key-events": "off"
   }
 }
