Lint project and add sample component test

--- a/dominion/frontend/.eslintrc.json
+++ b/dominion/frontend/.eslintrc.json
@@ -2,7 +2,8 @@
   "root": true,
   "extends": ["airbnb", "plugin:prettier/recommended", "prettier/react"],
   "env": {
-    "browser": true
+    "browser": true,
+    "jest": true
   },
   "rules": {
     "react/forbid-prop-types": false,
