--- a/dominion/frontend/package.json
+++ b/dominion/frontend/package.json
@@ -39,7 +39,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.6.0",
     "eslint-plugin-import": "^2.15.0",
     "eslint-plugin-prettier": "^3.0.1",
