--- a/dominion/frontend/package.json
+++ b/dominion/frontend/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "author": "Code for Africa <support@codeforafrica.com>",
   "private": true,
-  "homepage": "http://dominion.investigate.africa",
+  "main": "index.js",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.6.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
@@ -13,6 +13,9 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.2",
+    "classnames": "^2.2.6",
+    "dokku-deploy": "^1.0.3",
+    "gh-pages": "^2.0.1",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -35,5 +38,13 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^3.6.0",
+    "eslint-plugin-import": "^2.15.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "prettier": "^1.16.1"
+  }
 }
