--- a/dominion/frontend/package.json
+++ b/dominion/frontend/package.json
@@ -21,7 +21,8 @@
     "react-helmet": "^5.2.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "react-select": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
