syntax use_mapit

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,5 +31,5 @@ services:
       - PGUSER=hurumap
       - PGPASSWORD=hurumap
       - PYTHONDONTWRITEBYTECODE="True"
-      - use_mapit="True"
+      - USE_MAPIT=True
       # - DJANGO_DEBUG=False  # For testing deploys
