--- a/dominion/frontend/.eslintrc.json
+++ b/dominion/frontend/.eslintrc.json
@@ -7,21 +7,21 @@
     "jest": true
   },
   "rules": {
-    "react/prop-types": 0,
+    /*"react/prop-types": 0,
     "react/forbid-prop-types": 0,
-    "import/no-named-as-default": 0,
+    "import/no-named-as-default": 0,*/
     "react/jsx-filename-extension": [
       1,
       {
         "extensions": [".js", ".jsx"]
       }
     ]
-  },
-  "settings": {
+  }
+  /*"settings": {
     "import/resolver": {
       "node": {
         "extensions": [".js", ".jsx"]
       }
     }
-  }
+  }*/
 }
