--- a/dominion/frontend/.eslintrc.json
+++ b/dominion/frontend/.eslintrc.json
@@ -6,7 +6,10 @@
     "browser": true,
     "jest": true
   },
-  
+  "rules": {
+    "react/prop-types": 0,
+    "react/forbid-prop-types": 0,
+    "import/no-named-as-default": 0,
     "react/jsx-filename-extension": [
       1,
       {
