add sqls version csv

--- a/hurumap_land/script/towndistrictcodemapping.json
+++ b/hurumap_land/script/towndistrictcodemapping.json
@@ -1,61 +1,61 @@
 {
-"Aberdeen":"DC10", "Acornhoek Bushbuckridge":"DC32", "Albany":"DC10", "Albertinia HesseQua":"DC4",
-"Alexandria Ndlambe":"DC10", "Aliwal-Noord Maletsiwai":"DC14", "Alldays Blouberg":"DC35",
- "Amsterdam Mkhondo":"DC30", "Ballito KwaDukuza":"DC29", "Barkley-Wes Dikgatlong":"DC9",
- "Barkly-Oos Senqu":"DC14", "Bathurst Ndlambe":"DC10", "Beaufort-Wes":"DC5",
-  "Bedford Amathole":"DC12", "Bethal Gonovan Mbeki":"DC30", "Bethlehem Dihlabeng":"DC19",
-  "Bethulie":"DC16", "Bloemfontein Mangaung":"MAN", "Bloemhof Lekwa-Tecma":"DC39",
-   "Boshof Tokologo":"DC18", "Bothaville Nala":"DC18", "Brandfort Masilonyana":"DC18",
-   "Bray Kagisano-Molopo":"DC39", "Bredasdorp Cape Aqulhas":"DC3", "Britstown":"DC7",
-    "Bultfontein Tswelopele":"DC18", "Burgersfort Thubatse":"DC47",
-     "Caledon (Overberg) Theewaterskloof":"DC3", "Calitzdorp Kannaland":"DC4", "Calvinia Hantam":"DC6",
-     "Cape Town":"CPT", "Carletonville Merafong":"DC48", "Carnavon Kareeberg":"DC7",
-     "Cathcart Amahlathi":"DC12", "Ceres Witzenberg":"DC2", "Clanwilliam Cederberg":"DC1",
-     "Clocolan Setso":"DC19", "Colesberg Umsombomvu":"DC7", "Coligny (Lichtenburg) Ditsobotla":"DC38",
-     "Cradock Inxuba Yethemba":"DC13", "Delareyville Tswaing":"DC38",
-      "Dendron Makhado (Louis Trichardt)":"DC34", "Derdepoort":"DC38",
-      "Dewetsdorp Naledi":"DC16", "Douglas Siyancuma":"DC7", "Edenburg Kopanong":"DC16",
-       "Elliot Sakhiszwe":"DC14", "Ellisras Lephalale":"DC36", "Ewbank":"DC40",
-        "Fauresmith Kopanong":"DC16", "Ficksburg Setso":"DC19",
-        "Fort Beaufort Raymond Mhlaba":"DC12", "Fouriesburg Dikabeng":"DC19",
-        "Frankfort Mafube":"DC20", "Fraserburg Karoo Hoogland":"DC6", "George":"DC4",
-         "Gordonia":"DC6", "Graaff-Reinet Camdeboo":"DC10", "Hanover Emthanjeni":"DC7",
-          "Harrismith Maluti-A-Phofung":"DC19", "Heilbron Ngwathe":"DC20",
-          "Helpmekaar uMzinyathi":"DC24", "Hoopstad Tswelopele":"DC18",
-           "Hopetown Thembelihle":"DC7", "Humansdorp Kouga":"DC10", "Jacobsdal Letsemeng":"DC16",
-            "Jansenville Ikwezi":"DC10", "Joubertina Kou-Kamma":"DC10", "Jozini Mkuze":"DC27",
-             "Kenhardt Kai !Garib":"DC8", "Kimberley  HAY Frances Baard":"DC9",
-              "King Williams Town Baffalo City":"BUF", "Knysna":"DC4", "Kokstad":"DC43",
-              "Komatipoort Nkomazi":"DC32", "Komga Great Kei":"DC12", "Koppies Ngwathe":"DC20",
-               "Kroonstad Moqhaka":"DC20", "Kuruman Ga-Segonyana":"DC45", "Ladismith Kannaland":"DC4",
-               "Ladybrand Mantsopa":"DC19", "Ladysmith Emnambithi":"DC23", "Laingsburg":"DC5",
-                "Leandra Gonovan Mbeki":"DC30", "Lindley Nketoana":"DC19", "Louwsburg Abaqulusi":"DC26",
-            "Maclear Elundini":"DC14", "Mahikeng":"DC38", "Malmesbury Swartland":"DC1",
-            "Marikana (Rustenburg) Bonjala":"DC37", "Marken":"DC36", "Marquard Setso":"DC19",
-            "Matatiele":"DC44", "Middelburg EC Inxuba Yethemba":"DC13", "Middelburg MP (Groblersdal) Nkagala":"DC31",
-            "Moloporivier Bophirima":"DC39", "Molteno Inkwanca":"DC13", "Montagu Langeberg":"DC2", "Mosselbaai":"DC4",
-             "Mthatha King Sabata Dalindyebo":"DC15", "Murraysburg":"DC5", "Musina":"DC34", "Namakwa":"DC6",
-              "Nelspruit Mbombela":"DC32", "Newcastle":"DC25", "Nigel Ekurhuleni":"EKU", "Nylstroom Modimolle":"DC36",
-               "Odendaalsrus Matjhabeng":"DC18", "Oos-Londen Baffalo City":"BUF", "Oudtshoorn":"DC4", "PaarlWel Drakenstein":"DC2",
-               "Parys Ngwathe":"DC20", "Pearston Blue Crane":"DC10", "Phalaborwa Ba-Phalaborwa":"DC33",
-               "Philipolis Kopanong":"DC16", "Phillipstown Renosterberg":"DC7",
-               "Pietermaritzburg Msunduzi":"DC22", "Piketberg Bergriver":"DC1",
-               "Port Elizabeth Nelson Mendela Metropolitan":"NMA",
-               "Port Shepstone Ray Nkonyeni":"DC21", "Pretoria Tshwane":"TSH",
-               "Prieska Siyathemba":"DC7", "Prins Albert":"DC5",
-               "Queenstown Lukanji":"DC13", "Reddersburg Kopanong":"DC16",
-                "Reitz Nketoana":"DC19", "Reivilo Thaung":"DC39", "Riversdal Hessequa":"DC4", "Robertson Breede Winelands":"DC2",
-                "Roedtan Bela-Bela (Warmbad)":"DC36", "Rouxville Mohokare":"DC16", "Senekal Setsoto":"DC19",
-                "Smithfield Mohkare":"DC16", "Soekmekaar Morebeng (Tzaneen)":"DC35",
-                "Somerset-Oos Blue Crane":"DC10", "St Lucia Mtubatuba":"DC27", "Stellenbosch":"DC2",
-                "Steynsburg Gariep":"DC14", "Steytlerville Dr Beyers Naude":"DC10", "Stutterheim Amahlathi":"DC12",
-                "Sutherland":"DC6", "Swellendam":"DC3", "Tarkastad Tsolwana":"DC13", "Thaba Nchu":"MAN", "Thabazimbi":"DC36",
-                "Theunissen Masilonyana":"DC18", "Tulbagh":"DC2", "Uitenhage Nelson Mandela Metro":"NMA", "Ulundi":"DC26",
-                "Underberg KwaSani":"DC43", "Uniondale":"DC44", "Usutu":"DC35", "Utrecht eMadlangeni":"DC25",
-                "Vaalharts Phokwane":"DC9", "Vanrynsdorp Matzikama":"DC1", "Ventersburg Matjhabeng":"DC18",
-                "Victoria-Wes Umbuntu":"DC7", "Viljoenskroon Moqhaka":"DC20", "Vostershoop":"DC40",
-                "Vrede Phumelela":"DC19", "Vredefort Ngwathe":"DC20", "Vryburg Naledi":"DC39",
-                "Wepener Naledi":"MAN", "Wesselsbron Nala":"DC18", "Willomore Baviaans":"DC10",
-                "Winburg Masilonyana":"DC18", "Wodehouse":"DC14", "Wolmaransstad Maquassi":"DC40",
-                "Worcester Breede Valley":"DC2", "Zastron Mohokare":"DC16", "Zeerust Ramotshere":"DC38"
-              }
+"Aberdeen":"DC10","AcornhoekBushbuckridge":"DC32","Albany":"DC10","AlbertiniaHesseQua":"DC4",
+"AlexandriaNdlambe":"DC10","Aliwal-NoordMaletsiwai":"DC14","AlldaysBlouberg":"DC35",
+"AmsterdamMkhondo":"DC30","BallitoKwaDukuza":"DC29","Barkley-WesDikgatlong":"DC9",
+"Barkly-OosSenqu":"DC14","BathurstNdlambe":"DC10","Beaufort-Wes":"DC5",
+"BedfordAmathole":"DC12","BethalGonovanMbeki":"DC30","BethlehemDihlabeng":"DC19",
+"Bethulie":"DC16","BloemfonteinMangaung":"MAN","BloemhofLekwa-Tecma":"DC39",
+"BoshofTokologo":"DC18","BothavilleNala":"DC18","BrandfortMasilonyana":"DC18",
+"BrayKagisano-Molopo":"DC39","BredasdorpCapeAqulhas":"DC3","Britstown":"DC7",
+"BultfonteinTswelopele":"DC18","BurgersfortThubatse":"DC47",
+"Caledon(Overberg)Theewaterskloof":"DC3","CalitzdorpKannaland":"DC4","CalviniaHantam":"DC6",
+"CapeTown":"CPT","CarletonvilleMerafong":"DC48","CarnavonKareeberg":"DC7",
+"CathcartAmahlathi":"DC12","CeresWitzenberg":"DC2","ClanwilliamCederberg":"DC1",
+"ClocolanSetso":"DC19","ColesbergUmsombomvu":"DC7","Coligny(Lichtenburg)Ditsobotla":"DC38",
+"CradockInxubaYethemba":"DC13","DelareyvilleTswaing":"DC38",
+"DendronMakhado(LouisTrichardt)":"DC34","Derdepoort":"DC38",
+"DewetsdorpNaledi":"DC16","DouglasSiyancuma":"DC7","EdenburgKopanong":"DC16",
+"ElliotSakhiszwe":"DC14","EllisrasLephalale":"DC36","Ewbank":"DC40",
+"FauresmithKopanong":"DC16","FicksburgSetso":"DC19",
+"FortBeaufortRaymondMhlaba":"DC12","FouriesburgDikabeng":"DC19",
+"FrankfortMafube":"DC20","FraserburgKarooHoogland":"DC6","George":"DC4",
+"Gordonia":"DC6","Graaff-ReinetCamdeboo":"DC10","HanoverEmthanjeni":"DC7",
+"HarrismithMaluti-A-Phofung":"DC19","HeilbronNgwathe":"DC20",
+"HelpmekaaruMzinyathi":"DC24","HoopstadTswelopele":"DC18",
+"HopetownThembelihle":"DC7","HumansdorpKouga":"DC10","JacobsdalLetsemeng":"DC16",
+"JansenvilleIkwezi":"DC10","JoubertinaKou-Kamma":"DC10","JoziniMkuze":"DC27",
+"KenhardtKai!Garib":"DC8","KimberleyHAYFrancesBaard":"DC9",
+"KingWilliamsTownBaffaloCity":"BUF","Knysna":"DC4","Kokstad":"DC43",
+"KomatipoortNkomazi":"DC32","KomgaGreatKei":"DC12","KoppiesNgwathe":"DC20",
+"KroonstadMoqhaka":"DC20","KurumanGa-Segonyana":"DC45","LadismithKannaland":"DC4",
+"LadybrandMantsopa":"DC19","LadysmithEmnambithi":"DC23","Laingsburg":"DC5",
+"LeandraGonovanMbeki":"DC30","LindleyNketoana":"DC19","LouwsburgAbaqulusi":"DC26",
+"MaclearElundini":"DC14","Mahikeng":"DC38","MalmesburySwartland":"DC1",
+"Marikana(Rustenburg)Bonjala":"DC37","Marken":"DC36","MarquardSetso":"DC19",
+"Matatiele":"DC44","MiddelburgECInxubaYethemba":"DC13","MiddelburgMP(Groblersdal)Nkagala":"DC31",
+"MoloporivierBophirima":"DC39","MoltenoInkwanca":"DC13","MontaguLangeberg":"DC2","Mosselbaai":"DC4",
+"MthathaKingSabataDalindyebo":"DC15","Murraysburg":"DC5","Musina":"DC34","Namakwa":"DC6",
+"NelspruitMbombela":"DC32","Newcastle":"DC25","NigelEkurhuleni":"EKU","NylstroomModimolle":"DC36",
+"OdendaalsrusMatjhabeng":"DC18","Oos-LondenBaffaloCity":"BUF","Oudtshoorn":"DC4","PaarlWelDrakenstein":"DC2",
+"ParysNgwathe":"DC20","PearstonBlueCrane":"DC10","PhalaborwaBa-Phalaborwa":"DC33",
+"PhilipolisKopanong":"DC16","PhillipstownRenosterberg":"DC7",
+"PietermaritzburgMsunduzi":"DC22","PiketbergBergriver":"DC1",
+"PortElizabethNelsonMendelaMetropolitan":"NMA",
+"PortShepstoneRayNkonyeni":"DC21","PretoriaTshwane":"TSH",
+"PrieskaSiyathemba":"DC7","PrinsAlbert":"DC5",
+"QueenstownLukanji":"DC13","ReddersburgKopanong":"DC16",
+"ReitzNketoana":"DC19","ReiviloThaung":"DC39","RiversdalHessequa":"DC4","RobertsonBreedeWinelands":"DC2",
+"RoedtanBela-Bela(Warmbad)":"DC36","RouxvilleMohokare":"DC16","SenekalSetsoto":"DC19",
+"SmithfieldMohkare":"DC16","SoekmekaarMorebeng(Tzaneen)":"DC35",
+"Somerset-OosBlueCrane":"DC10","StLuciaMtubatuba":"DC27","Stellenbosch":"DC2",
+"SteynsburgGariep":"DC14","SteytlervilleDrBeyersNaude":"DC10","StutterheimAmahlathi":"DC12",
+"Sutherland":"DC6","Swellendam":"DC3","TarkastadTsolwana":"DC13","ThabaNchu":"MAN","Thabazimbi":"DC36",
+"TheunissenMasilonyana":"DC18","Tulbagh":"DC2","UitenhageNelsonMandelaMetro":"NMA","Ulundi":"DC26",
+"UnderbergKwaSani":"DC43","Uniondale":"DC44","Usutu":"DC35","UtrechteMadlangeni":"DC25",
+"VaalhartsPhokwane":"DC9","VanrynsdorpMatzikama":"DC1","VentersburgMatjhabeng":"DC18",
+"Victoria-WesUmbuntu":"DC7","ViljoenskroonMoqhaka":"DC20","Vostershoop":"DC40",
+"VredePhumelela":"DC19","VredefortNgwathe":"DC20","VryburgNaledi":"DC39",
+"WepenerNaledi":"MAN","WesselsbronNala":"DC18","WillomoreBaviaans":"DC10",
+"WinburgMasilonyana":"DC18","Wodehouse":"DC14","WolmaransstadMaquassi":"DC40",
+"WorcesterBreedeValley":"DC2","ZastronMohokare":"DC16","ZeerustRamotshere":"DC38"
+}
