--- a/hurumap_land/script/towndistrictlevelmapping.json
+++ b/hurumap_land/script/towndistrictlevelmapping.json
@@ -1,173 +1,173 @@
 {
 	"Aberdeen":"district",
-	"Acornhoek Bushbuckridge":"district",
+	"AcornhoekBushbuckridge":"district",
 	"Albany":"district",
-	"Albertinia HesseQua":"district",
-	"Alexandria Ndlambe":"district",
-	"Aliwal-Noord Maletsiwai":"district",
-	"Alldays Blouberg":"district",
-	"Amsterdam Mkhondo":"district",
-	"Ballito KwaDukuza":"district",
-	"Barkley-Wes Dikgatlong":"district",
-	"Barkly-Oos Senqu":"district",
-	"Bathurst Ndlambe":"district",
+	"AlbertiniaHesseQua":"district",
+	"AlexandriaNdlambe":"district",
+	"Aliwal-NoordMaletsiwai":"district",
+	"AlldaysBlouberg":"district",
+	"AmsterdamMkhondo":"district",
+	"BallitoKwaDukuza":"district",
+	"Barkley-WesDikgatlong":"district",
+	"Barkly-OosSenqu":"district",
+	"BathurstNdlambe":"district",
 	"Beaufort-Wes":"district",
-	"Bedford Amathole":"district",
-	"Bethal Gonovan Mbeki":"district",
-	"Bethlehem Dihlabeng":"district",
+	"BedfordAmathole":"district",
+	"BethalGonovanMbeki":"district",
+	"BethlehemDihlabeng":"district",
 	"Bethulie":"district",
-	"Bloemfontein Mangaung":"municipality",
-	"Bloemhof Lekwa-Tecma":"district",
-	"Boshof Tokologo":"district",
-	"Bothaville Nala":"district",
-	"Brandfort Masilonyana":"district",
-	"Bray Kagisano-Molopo":"district",
-	"Bredasdorp Cape Aqulhas":"district",
+	"BloemfonteinMangaung":"municipality",
+	"BloemhofLekwa-Tecma":"district",
+	"BoshofTokologo":"district",
+	"BothavilleNala":"district",
+	"BrandfortMasilonyana":"district",
+	"BrayKagisano-Molopo":"district",
+	"BredasdorpCapeAqulhas":"district",
 	"Britstown":"district",
-	"Bultfontein Tswelopele":"district",
-	"Burgersfort Thubatse":"district",
-	"Caledon (Overberg) Theewaterskloof":"district",
-	"Calitzdorp Kannaland":"district",
-	"Calvinia Hantam":"district",
-	"Cape Town":"municipality",
-	"Carletonville Merafong":"district",
-	"Carnavon Kareeberg":"district",
-	"Cathcart Amahlathi":"district",
-	"Ceres Witzenberg":"district",
-	"Clanwilliam Cederberg":"district",
-	"Clocolan Setso":"district",
-	"Colesberg Umsombomvu":"district",
-	"Coligny (Lichtenburg) Ditsobotla":"district",
-	"Cradock Inxuba Yethemba":"district",
-	"Delareyville Tswaing":"district",
-	"Dendron Makhado (Louis Trichardt)":"district",
+	"BultfonteinTswelopele":"district",
+	"BurgersfortThubatse":"district",
+	"Caledon(Overberg)Theewaterskloof":"district",
+	"CalitzdorpKannaland":"district",
+	"CalviniaHantam":"district",
+	"CapeTown":"municipality",
+	"CarletonvilleMerafong":"district",
+	"CarnavonKareeberg":"district",
+	"CathcartAmahlathi":"district",
+	"CeresWitzenberg":"district",
+	"ClanwilliamCederberg":"district",
+	"ClocolanSetso":"district",
+	"ColesbergUmsombomvu":"district",
+	"Coligny(Lichtenburg)Ditsobotla":"district",
+	"CradockInxubaYethemba":"district",
+	"DelareyvilleTswaing":"district",
+	"DendronMakhado(LouisTrichardt)":"district",
 	"Derdepoort":"district",
-	"Dewetsdorp Naledi":"district",
-	"Douglas Siyancuma":"district",
-	"Edenburg Kopanong":"district",
-	"Elliot Sakhiszwe":"district",
-	"Ellisras Lephalale":"district",
+	"DewetsdorpNaledi":"district",
+	"DouglasSiyancuma":"district",
+	"EdenburgKopanong":"district",
+	"ElliotSakhiszwe":"district",
+	"EllisrasLephalale":"district",
 	"Ewbank":"municipality",
-	"Fauresmith Kopanong":"district",
-	"Ficksburg Setso":"district",
-	"Fort Beaufort Raymond Mhlaba":"district",
-	"Fouriesburg Dikabeng":"district",
-	"Frankfort Mafube":"district",
-	"Fraserburg Karoo Hoogland":"district",
+	"FauresmithKopanong":"district",
+	"FicksburgSetso":"district",
+	"FortBeaufortRaymondMhlaba":"district",
+	"FouriesburgDikabeng":"district",
+	"FrankfortMafube":"district",
+	"FraserburgKarooHoogland":"district",
 	"George":"district",
 	"Gordonia":"district",
-	"Graaff-Reinet Camdeboo":"district",
-	"Hanover Emthanjeni":"district",
-	"Harrismith Maluti-A-Phofung":"district",
-	"Heilbron Ngwathe":"district",
-	"Helpmekaar uMzinyathi":"district",
-	"Hoopstad Tswelopele":"district",
-	"Hopetown Thembelihle":"district",
-	"Humansdorp Kouga":"district",
-	"Jacobsdal Letsemeng":"district",
-	"Jansenville Ikwezi":"district",
-	"Joubertina Kou-Kamma":"district",
-	"Jozini Mkuze":"district",
-	"Kenhardt Kai !Garib":"district",
-	"Kimberley / HAY Frances Baard":"district",
-	"King Williams Town Baffalo City":"municipality",
+	"Graaff-ReinetCamdeboo":"district",
+	"HanoverEmthanjeni":"district",
+	"HarrismithMaluti-A-Phofung":"district",
+	"HeilbronNgwathe":"district",
+	"HelpmekaaruMzinyathi":"district",
+	"HoopstadTswelopele":"district",
+	"HopetownThembelihle":"district",
+	"HumansdorpKouga":"district",
+	"JacobsdalLetsemeng":"district",
+	"JansenvilleIkwezi":"district",
+	"JoubertinaKou-Kamma":"district",
+	"JoziniMkuze":"district",
+	"KenhardtKai!Garib":"district",
+	"KimberleyHAYFrancesBaard":"district",
+	"KingWilliamsTownBaffaloCity":"municipality",
 	"Knysna":"district",
 	"Kokstad":"district",
-	"Komatipoort Nkomazi":"district",
-	"Komga Great Kei":"district",
-	"Koppies Ngwathe":"district",
-	"Kroonstad Moqhaka":"district",
-	"Kuruman Ga-Segonyana":"district",
-	"Ladismith Kannaland":"district",
-	"Ladybrand Mantsopa":"district",
-	"Ladysmith Emnambithi":"district",
+	"KomatipoortNkomazi":"district",
+	"KomgaGreatKei":"district",
+	"KoppiesNgwathe":"district",
+	"KroonstadMoqhaka":"district",
+	"KurumanGa-Segonyana":"district",
+	"LadismithKannaland":"district",
+	"LadybrandMantsopa":"district",
+	"LadysmithEmnambithi":"district",
 	"Laingsburg":"district",
-	"Leandra Gonovan Mbeki":"district",
-	"Lindley Nketoana":"district",
-	"Louwsburg Abaqulusi":"district",
-	"Maclear Elundini":"district",
+	"LeandraGonovanMbeki":"district",
+	"LindleyNketoana":"district",
+	"LouwsburgAbaqulusi":"district",
+	"MaclearElundini":"district",
 	"Mahikeng":"district",
-	"Malmesbury Swartland":"district",
-	"Marikana (Rustenburg) Bonjala":"district",
+	"MalmesburySwartland":"district",
+	"Marikana(Rustenburg)Bonjala":"district",
 	"Marken":"district",
-	"Marquard Setso":"district",
+	"MarquardSetso":"district",
 	"Matatiele":"district",
-	"Middelburg EC Inxuba Yethemba":"district",
-	"Middelburg MP (Groblersdal) Nkagala":"district",
-	"Moloporivier Bophirima":"district",
-	"Molteno Inkwanca":"district",
-	"Montagu Langeberg":"district",
+	"MiddelburgECInxubaYethemba":"district",
+	"MiddelburgMP(Groblersdal)Nkagala":"district",
+	"MoloporivierBophirima":"district",
+	"MoltenoInkwanca":"district",
+	"MontaguLangeberg":"district",
 	"Mosselbaai":"district",
-	"Mthatha King Sabata Dalindyebo":"district",
+	"MthathaKingSabataDalindyebo":"district",
 	"Murraysburg":"district",
 	"Musina":"district",
 	"Namakwa":"district",
-	"Nelspruit Mbombela":"district",
+	"NelspruitMbombela":"district",
 	"Newcastle":"district",
-	"Nigel Ekurhuleni":"municipality",
-	"Nylstroom Modimolle":"district",
-	"Odendaalsrus Matjhabeng":"district",
-	"Oos-Londen Baffalo City":"municipality",
+	"NigelEkurhuleni":"municipality",
+	"NylstroomModimolle":"district",
+	"OdendaalsrusMatjhabeng":"district",
+	"Oos-LondenBaffaloCity":"municipality",
 	"Oudtshoorn":"district",
-	"Paarl/Wel Drakenstein":"district",
-	"Parys Ngwathe":"district",
-	"Pearston Blue Crane":"district",
-	"Phalaborwa Ba-Phalaborwa":"district",
-	"Philipolis Kopanong":"district",
-	"Phillipstown Renosterberg":"district",
-	"Pietermaritzburg Msunduzi":"district",
-	"Piketberg Bergriver":"district",
-	"Port Elizabeth Nelson Mendela Metropolitan":"municipality",
-	"Port Shepstone Ray Nkonyeni":"district",
-	"Pretoria Tshwane":"municipality",
-	"Prieska Siyathemba":"district",
-	"Prins Albert":"district",
-	"Queenstown Lukanji":"district",
-	"Reddersburg Kopanong":"district",
-	"Reitz Nketoana":"district",
-	"Reivilo Thaung":"district",
-	"Riversdal Hessequa":"district",
-	"Robertson Breede /Winelands":"district",
-	"Roedtan Bela-Bela (Warmbad)":"district",
-	"Rouxville Mohokare":"district",
-	"Senekal Setsoto":"district",
-	"Smithfield Mohkare":"district",
-	"Soekmekaar Morebeng (Tzaneen)":"district",
-	"Somerset-Oos Blue Crane":"district",
-	"St Lucia Mtubatuba":"district",
+	"PaarlWelDrakenstein":"district",
+	"ParysNgwathe":"district",
+	"PearstonBlueCrane":"district",
+	"PhalaborwaBa-Phalaborwa":"district",
+	"PhilipolisKopanong":"district",
+	"PhillipstownRenosterberg":"district",
+	"PietermaritzburgMsunduzi":"district",
+	"PiketbergBergriver":"district",
+	"PortElizabethNelsonMendelaMetropolitan":"municipality",
+	"PortShepstoneRayNkonyeni":"district",
+	"PretoriaTshwane":"municipality",
+	"PrieskaSiyathemba":"district",
+	"PrinsAlbert":"district",
+	"QueenstownLukanji":"district",
+	"ReddersburgKopanong":"district",
+	"ReitzNketoana":"district",
+	"ReiviloThaung":"district",
+	"RiversdalHessequa":"district",
+	"RobertsonBreedeWinelands":"district",
+	"RoedtanBela-Bela(Warmbad)":"district",
+	"RouxvilleMohokare":"district",
+	"SenekalSetsoto":"district",
+	"SmithfieldMohkare":"district",
+	"SoekmekaarMorebeng(Tzaneen)":"district",
+	"Somerset-OosBlueCrane":"district",
+	"StLuciaMtubatuba":"district",
 	"Stellenbosch":"district",
-	"Steynsburg Gariep":"district",
-	"Steytlerville Dr Beyers Naude":"district",
-	"Stutterheim Amahlathi":"district",
+	"SteynsburgGariep":"district",
+	"SteytlervilleDrBeyersNaude":"district",
+	"StutterheimAmahlathi":"district",
 	"Sutherland":"district",
 	"Swellendam":"district",
-	"Tarkastad Tsolwana":"district",
-	"Thaba Nchu":"municipality",
+	"TarkastadTsolwana":"district",
+	"ThabaNchu":"municipality",
 	"Thabazimbi":"district",
-	"Theunissen Masilonyana":"district",
+	"TheunissenMasilonyana":"district",
 	"Tulbagh":"district",
-	"Uitenhage Nelson Mandela Metro":"municipality",
+	"UitenhageNelsonMandelaMetro":"municipality",
 	"Ulundi":"district",
-	"Underberg KwaSani":"district",
+	"UnderbergKwaSani":"district",
 	"Uniondale":"district",
 	"Usutu":"district",
-	"Utrecht eMadlangeni":"district",
-	"Vaalharts Phokwane":"district",
-	"Vanrynsdorp Matzikama":"district",
-	"Ventersburg Matjhabeng":"district",
-	"Victoria-Wes Umbuntu":"district",
-	"Viljoenskroon Moqhaka":"district",
+	"UtrechteMadlangeni":"district",
+	"VaalhartsPhokwane":"district",
+	"VanrynsdorpMatzikama":"district",
+	"VentersburgMatjhabeng":"district",
+	"Victoria-WesUmbuntu":"district",
+	"ViljoenskroonMoqhaka":"district",
 	"Vostershoop":"municipality",
-	"Vrede Phumelela":"district",
-	"Vredefort Ngwathe":"district",
-	"Vryburg Naledi":"district",
-	"Wepener Naledi":"municipality",
-	"Wesselsbron Nala":"district",
-	"Willomore Baviaans":"district",
-	"Winburg Masilonyana":"district",
+	"VredePhumelela":"district",
+	"VredefortNgwathe":"district",
+	"VryburgNaledi":"district",
+	"WepenerNaledi":"municipality",
+	"WesselsbronNala":"district",
+	"WillomoreBaviaans":"district",
+	"WinburgMasilonyana":"district",
 	"Wodehouse":"district",
-	"Wolmaransstad Maquassi":"district",
-	"Worcester Breede Valley":"district",
-	"Zastron Mohokare":"district",
-	"Zeerust Ramotshere":"district"
+	"WolmaransstadMaquassi":"district",
+	"WorcesterBreedeValley":"district",
+	"ZastronMohokare":"district",
+	"ZeerustRamotshere":"district"
 }
