fix place search and comparison

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,5 +30,6 @@ services:
       - PGDATABASE=${HURUMAP_APP:-hurumap_land}
       - PGUSER=hurumap
       - PGPASSWORD=hurumap
+      - USE_MAPIT=True
       - PYTHONDONTWRITEBYTECODE="True"
       # - DJANGO_DEBUG=False  # For testing deploys
