fix strtobool error

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,4 +31,5 @@ services:
       - PGUSER=hurumap
       - PGPASSWORD=hurumap
       - PYTHONDONTWRITEBYTECODE="True"
+      - USE_MAPIT=True
       # - DJANGO_DEBUG=False  # For testing deploys
