--- a/dominion/dominion_ui/package.json
+++ b/dominion/dominion_ui/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Dominion",
   "description": "Dominion",
-  "version": "0.1.0",
+  "version": "0.1.0-alpha",
   "author": "Code for Africa <support@codeforafrica.com>",
   "private": true,
   "main": "index.js",
@@ -14,13 +14,9 @@
     "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.2",
     "classnames": "^2.2.6",
-    "dokku-deploy": "^1.0.3",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-helmet": "^5.2.0",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3"
   },
   "scripts": {
@@ -28,9 +24,7 @@
     "lint": "node_modules/eslint/bin/eslint.js --fix src",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "CI=true yarn test ; CI=true yarn build",
-    "deploy": "gh-pages -d public"
+    "eject": "react-scripts eject"
   },
   "browserslist": [
     ">0.2%",
@@ -44,7 +38,6 @@
     "eslint-plugin-import": "^2.15.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
-    "gh-pages": "^2.0.1",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.0",
     "prettier": "^1.16.1"
