[WIP] Agrids land sales update (#133)
Agrids land sales update

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,4 +32,5 @@ services:
       - PGPASSWORD=hurumap
       - USE_MAPIT=True
       - PYTHONDONTWRITEBYTECODE="True"
+      - USE_MAPIT=false
       # - DJANGO_DEBUG=False  # For testing deploys
