Re/Set up Dominion as Django templates React apps (#138)
* Reset Dominion to be on top of Django templates

* Simply asset_manifest + introduce withRoot for UI

* Rename component folder to components

* Remove used deps & components, update package.json

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,6 @@ services:
       - PGUSER=hurumap
       - PGPASSWORD=hurumap
       - USE_MAPIT=True
-      - PYTHONDONTWRITEBYTECODE="True"
-      - USE_MAPIT=false
+      - PYTHONUNBUFFERED=True
+      - PYTHONDONTWRITEBYTECODE=True
       # - DJANGO_DEBUG=False  # For testing deploys
