--- a/dominion/dominion_ui/package.json
+++ b/dominion/dominion_ui/package.json
@@ -17,7 +17,12 @@
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-helmet": "^5.2.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.3",
+    "react-select": "^2.3.0",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,7 +45,8 @@
     "eslint-plugin-react": "^7.12.4",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.0",
-    "prettier": "^1.16.1"
+    "prettier": "^1.16.1",
+    "webpack-cli": "^3.2.3"
   },
   "husky": {
     "hooks": {
