--- a/dominion/dominion_ui/package.json
+++ b/dominion/dominion_ui/package.json
@@ -17,12 +17,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-helmet": "^5.2.0",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
-    "react-select": "^2.3.0",
-    "styled-components": "^4.1.3"
+    "react-scripts": "2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
