--- a/dominion/dominion_ui/package.json
+++ b/dominion/dominion_ui/package.json
@@ -40,8 +40,7 @@
     "eslint-plugin-react": "^7.12.4",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.0",
-    "prettier": "^1.16.1",
-    "webpack-cli": "^3.2.3"
+    "prettier": "^1.16.1"
   },
   "husky": {
     "hooks": {
