--- a/dominion/dominion_ui/package.json
+++ b/dominion/dominion_ui/package.json
@@ -11,13 +11,17 @@
     "@fortawesome/free-brands-svg-icons": "^5.6.3",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "@material-ui/core": "^3.9.0",
+    "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "classnames": "^2.2.6",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-list-select": "^0.4.1",
+    "react-number-format": "^4.0.6",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.3",
+    "react-select": "^2.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
