--- a/dominion/dominion_ui/package.json
+++ b/dominion/dominion_ui/package.json
@@ -17,7 +17,8 @@
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "weak-key": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
