--- a/dominion/dominion_ui/package.json
+++ b/dominion/dominion_ui/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
