--- a/dominion/dominion_ui/package.json
+++ b/dominion/dominion_ui/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.11",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
+    "react-autosuggest": "^9.4.3",
     "react-dom": "^16.7.0",
     "react-list-select": "^0.4.1",
     "react-number-format": "^4.0.6",
