Add Dominion build folder to Git

--- a/.gitignore
+++ b/.gitignore
@@ -484,6 +484,8 @@ tags
 static/*
 */static/css/*.css
 
+!dominion/dominion_ui/build
+
 ### VisualStudioCode ###
 # Ignore the whole folder
 .vscode/*
