--- a/dominion/dominion_ui/package.json
+++ b/dominion/dominion_ui/package.json
@@ -22,17 +22,14 @@
     "react-number-format": "^4.0.8",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
-    "react-select": "^2.4.1",
-    "snyk": "^1.189.0"
+    "react-select": "^2.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "lint": "node_modules/eslint/bin/eslint.js --fix src",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "snyk-protect": "snyk protect",
-    "prepublish": "npm run snyk-protect"
+    "eject": "react-scripts eject"
   },
   "browserslist": [
     ">0.2%",
@@ -61,6 +58,5 @@
       "yarn lint",
       "git add"
     ]
-  },
-  "snyk": true
+  }
 }
